<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pocket Player</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="title_activity_title_screen">Title Screen</string>
    <string name="title_activity_app_info">App Info</string>
    <string name="title_activity_game_select">Game Select</string>
    <string name="title_activity_character_select">Character Select</string>
    <string name="title_activity_character_info">Character Info</string>
    <string name="title_activity_edit_screen">Edit Screen</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_contact_mail">Contacts</string>
    <string name="Stat">Stats</string>
    <string name="Equipment">Equipment</string>
    <string name="okay">OK</string>
    <string name="Skills">Skills and Feats</string>
    <string name="cont">Continue</string>
    <string name="nchar">[New Slot]</string>
    <string name="reg">Register</string>
    <string name="back">Back</string>
    <string name="exit">Exit</string>
    <string name="forget">Forget Login</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="about">About</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="author">Author(s)</string>
    <string name="dd">Dungeons and Dragons</string>
    <string name="pf">Pathfinder</string>
    <string name="edit">Edit</string>
    <string name="ChInfo">Char Info</string>
    <string name="skills">Skills</string>
    <string name="equipment">Equipment</string>
    <string name="mail">Mail</string>
    <string name="friends">Friends</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="newreg">New Registration</string>
    <string name="newreg2">Register</string>
    <string name="action_settings">Settings</string>
    <string name="full_name">Registration Full Name</string>
    <string name="alreadyreg">Already has account! Login here</string>
    <string name="pref_app_color_title">Color</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_key_char">Character Stats</string>
    <string name="pref_theme_change">Change Theme</string>

</resources>