<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterSelect" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/title_activity_character_select"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:layout_toLeftOf="@+id/textView1"
        android:text="@string/back" />

    <Button
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/back"
        android:layout_alignBottom="@+id/back"
        android:layout_alignParentRight="true"
        android:layout_marginRight="18dp"
        android:text="@string/logout" />

    <Button
        android:id="@+id/new1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/nchar" 
        android:onClick="goToCharInfo"/>

    <Button
        android:id="@+id/new2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new1"
        android:layout_below="@+id/new1"
        android:layout_marginTop="30dp"
        android:text="@string/nchar"
        android:onClick="goToCharInfo"/>
    
    <Button
        android:id="@+id/new3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new2"
        android:layout_below="@+id/new2"
        android:layout_marginTop="30dp"
        android:text="@string/nchar"
        android:onClick="goToCharInfo"/>

</RelativeLayout>