<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditScreen" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/Stat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    
                    <TextView
        				android:id="@+id/textView1"
				        android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/Stat"
        				android:textAppearance="?android:attr/textAppearanceLarge" />
                    
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Equip"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    
                    <TextView
        				android:id="@+id/textView2"
				        android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/Equipment"
        				android:textAppearance="?android:attr/textAppearanceLarge" />
                    
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Skill"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    
                    <TextView
        				android:id="@+id/textView3"
				        android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:text="@string/Skills"
        				android:textAppearance="?android:attr/textAppearanceLarge" />
                    
                </LinearLayout>
                
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>